--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+:root {
+  /* Light mode colors */
+  --bg-color-1: #9db3ed;
+  --bg-color-2: #f9f9f9;
+  --text-color-1: #0b1537;
+  --text-color-2: #636363;
+}
+
+.dark-mode {
+  /* Dark mode colors */
+  --bg-color-1: #172d67;
+  --bg-color-2: #050c26;
+  --text-color-1: #fbfcfc;
+  --text-color-2: #bbbcbb;
+}
+
+
 .app{
   background-color: #2a6c84;
   min-height: 100vh;
@@ -11,21 +28,41 @@
   border-radius: 30px;
   box-shadow: 1px -1px 20px rgba(0, 0, 0, 0.15);
   position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .app_calculator_navbar {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
   background-color: transparent;
   min-height: 30px;
   padding: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
-
+.app_calculator_navbar img{
+  height: 20px;
+  width: 20px;
+  margin-left: 40px;
+}
 .app_calculator_navbar_toggle {
   height: 15px;
   width: 30px;
   border-radius: 20px;
-  box-shadow: 1px 1px 40px 80px rgba(0, 0, 0, 0.14);
-  
+  box-shadow: 1px 1px 40px 80px rgba(0, 0, 0, 0.14);  
+}
+.app_calculator_navbar_toggle_circle{
+  height: 15px;
+  width: 15px;
+  background-color: white;
+  border-radius: 50%;
+  transition: 300ms;
+}
+.app_calculator_navbar_toggle_circle_active{
+  margin-left: 15px;
 }
