--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root {
+.app {
   /* Light mode colors */
   --bg-color-1: #9db3ed;
   --bg-color-2: #f9f9f9;
@@ -6,12 +6,28 @@
   --text-color-2: #636363;
 }
 
-.dark-mode {
+.app[data-theme="dark"] {
   /* Dark mode colors */
   --bg-color-1: #172d67;
   --bg-color-2: #050c26;
   --text-color-1: #fbfcfc;
   --text-color-2: #bbbcbb;
+}
+.custom-scroll::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.14);
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: gray;
 }
 
 
