--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,1 @@
-*{
-  margin: 0;
-  padding:0;
-  box-sizing: border-box;
-}
-body{
-  background-color: #282c34;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import "tailwindcss";
